--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  google_maps_flutter: ^0.5.21+15
+  flutter_rating_bar: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +50,13 @@ flutter:
     - logo.png
     - photo.png
     - relax.png
+    - rating.png
+    - top1.png
+    - top2.png
+    - top3.png
+    - top4.png
+    - hoteldetail.png
+    - person.jpg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
